--- a/gf_sergipano.html
+++ b/gf_sergipano.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-</head>
+  </head>
+  <style>
+    body {
+      background-color: rgb(133, 159, 83)
+    }
+  </style>
   <body>
     <ul class="nav nav-tabs nav justify-content-center">
         <li class="nav-item">
@@ -61,11 +65,20 @@
             </tr>
             </tbody>
         </table>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+          <li class="page-item"><a class="page-link" href="#">Ant.</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Próx.</a></li>
+        </ul>
+      </nav>
     </div>
 
     <div class="row">
         <div class="col-sm-6">
-          <div class="card text-center" style="width: 15rem;">
+          <div class="card text-center bg-danger" style="width: 15rem;">
             <img class="card-img-top" src="https://www.cssergipe.com.br/img/site/club-fc-5.png" alt="Imagem de capa do card">
             <div class="card-body">
               <h5 class="card-title">CLUB SPORTIVO SERGIPE</h5>
@@ -75,16 +88,28 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card text-center" style="width: 15rem;">
+          <div class="card text-center bg-primary" style="width: 15rem;">
             <img class="card-img-top" src="https://cdngo.academiadasapostasbrasil.com/addons/default/modules/stats/img/team/150x150/3715.webp" alt="Imagem de capa do card">
             <div class="card-body">
                 <h5 class="card-title">ASSOCIÇÃO DESPORTIVA CONFIANÇA</h5>
                 <p class="card-text">é um clube de futebol brasileiro da cidade de Aracaju, capital do Estado de Sergipe. Fundado em 1º de maio de 1936</p>
-              <a href="#" class="btn btn-primary">Visitar</a>
+              <a href="#" class="btn btn-secondary">Visitar</a>
             </div>
           </div>
         </div>
     </div>
+        <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Clique aqui">
+          Whatsapp
+        </button>
+        <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="right" title="Clique aqui">
+          Instagram
+        </button>
+        <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Clique aqui">
+          Facebook
+        </button>
+        <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="left" title="Clique aqui">
+          Twitter
+        </button>
     <div class="accordion" id="accordionExample">
         <div class="card">
           <div class="card-header" id="headingOne">
@@ -130,6 +155,18 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="progress">
+        <div class="progress-bar-striped bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+      </div>
+      <div class="progress">
+        <div class="progress-bar-striped bg-info" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+      </div>
+      <div class="progress">
+        <div class="progress-bar-striped bg-warning" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+      </div>
+      <div class="progress">
+        <div class="progress-bar-striped bg-danger" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
       </div>
    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
